# SfSpp_preprocessing

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  data_path.h  download.sh  edgeline_extraction.cpp  mesh_processing.cpp  setup_container.sh
AxisExtraction/: apply_robustifier.m  cao_update_func.m  check_base_and_rim.m  check_surface_inversion_v2.m  compute_axis_of_symmetry.m  compute_biaxial_cao_error.m  compute_cao_error.m  compute_l2p_distance.m  compute_pottmann_axis.m  compute_rim_errors.m  cross2mat.m  euc2plucker.m  extract_axis.m  optimize_using_lm.m  preprocess_new_pots.m  read_axis.m  read_breakline.m  read_surfaces.m  robustifier_cauchy.m  robustifier_gm.m  robustifier_huber.m  run_potsac.m  visualize_axis_of_symmetry_two.m  visualize_fragment.m  visualize_point_cloud.m  write_axis.m  write_breakline.m  write_surfaces.m
